Fixed Carousel Overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,8 +16,8 @@ a {
 }
 
 .swiper {
+  overflow: hidden;
   height: 100%;
-  z-index: 50;
 }
 
 .swiper-wrapper {
